--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,16 @@
 
   <h1>Diocese of Missouri Service Times</h1>
 
+  <form method="POST"><h1>Enter your location:</h1>
+    <input type="text" name="location">
+    <input type="submit" name="Submit">
+  </form>
+
   <h2>List of Churches</h2>
   {% for church in churches %}
     <p>{{ church }}</p>
   {% endfor %}
+  <h2><p>{{response}}</p></h2>
 
 </body>
 </html>
