add gitignore, clean up unused methods/code

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   {% for church in churches %}
     <p>{{church.name }}</p>
     <p>{{church.address}}</p>
-    <p>{{church.distance}}</p>
+    <p>{{church.distance}} miles</p>
   {% endfor %}
 </body>
 </html>
