--- a/templates/index.html
+++ b/templates/index.html
@@ -3,35 +3,41 @@
 <html>
 <head>
   <title>Diocese of Missouri Service Times</title>
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <h1>Diocese of Missouri Service Times </h1>
+  <script src="https://kit.fontawesome.com/afc2ef3fbe.js" crossorigin="anonymous"></script>
   <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-
-  <h1>Diocese of Missouri Service Times</h1>
-
-  <form method="POST"><h1>Enter your location:</h1>
+  <form method="POST"><h3>Enter another location:</h3>
     <input type="text" name="location">
-    <input type="submit" name="Submit">
+    <input type="submit" name="submit">
   </form>
-  <h2>{{response}}</h2>
+  <h2 id="tec">{{response}}</h2>
   <!--{% for church in churches %}
     <h3>{{church.name }}</h3>
     <p>{{church.address}}</p>
     <p>{{church.distance}} miles</p>
   {% endfor %}!-->
   {% for key, value in churches.items() %}
-       <h3> {{ key.name }} </h3>
+       <p><i class="fa-solid fa-church"></i></p>
+       <h3><a href={{key.link}}>{{ key.name }}</a></h3>
        <p> {{ key.address }} </p>
        <p> {{ key.distance }} miles </p>
        <tr>
             {% for service in value %}
-              <p>{{ service.day }}
-              <td>{{ service.time }}</td>
-              <td>{{ service.type }}</td>
-              <td>{{ service.notes }}</td></p>
+              <p>{{ service.type }}</td>
+              <td>{{ service.day }}
+              <td>{{ service.time }}</td> </p>
+              {% if service.notes %}
+                  <p>Notes: {{ service.notes }}</p>
+            {% endif %}
             {% endfor %}
         </tr>
   {% endfor %}
+
+  <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+  <!-- Load our React component. -->
+  <!-- <script src="{{ url_for('static', filename='script.js') }}"></script> -->
 </body>
 </html>
