fixed issue with empty input throwing errors

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <html>
 <head>
   <title>Diocese of Missouri Service Times</title>
-  <h1>Diocese of Missouri Service Times </h1>
   <script src="https://kit.fontawesome.com/afc2ef3fbe.js" crossorigin="anonymous"></script>
   <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-  <form method="POST"><h3>Enter another location:</h3>
+  <h1>Diocese of Missouri Service Times </h1>
+  <form method="POST"><h3>Enter a location:</h3>
     <input type="text" name="location">
     <input type="submit" name="submit">
   </form>
